After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699554 - Crash when shutting down GTK+ main loop repeatedly
Crash when shutting down GTK+ main loop repeatedly
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Li Yuan
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-05-03 07:00 UTC by Simon Feltman
Modified: 2013-05-11 01:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Python script to showing crash (374 bytes, text/x-python)
2013-05-03 07:01 UTC, Simon Feltman
Details

Description Simon Feltman 2013-05-03 07:00:45 UTC
When successively starting a GTK+ main loop and shutting it down with a timeout, I get crashes in atk-adapter/bridge.c:register_reply

This came up while debugging unrelated problems from a Python console. It seems like the register_reply code could be a bit more robust as there are a couple of problems with it in this scenario. Attached is a script which causes the crash.
Comment 1 Simon Feltman 2013-05-03 07:01:33 UTC
Created attachment 243145 [details]
Python script to showing crash
Comment 2 Mike Gorse 2013-05-11 01:37:10 UTC
This should be fixed by commit 031946 (master) and 67c512 (gnome-3-8), although the code should probably be refactored to make SpiBridge a GObject. Anyway, thanks for the report.