Add a NULL check into register_reply

Register_reply could access invalid memory if it is called after
atk_bridge_adaptor_cleanup() has been called.

This code should probably be refactored to make the instance act as a
GObject, but committing this for now to fix the crash.

https://bugzilla.gnome.org/show_bug.cgi?id=699554